--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,60 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
-    android:layout_gravity="center"
     android:layout_height="match_parent"
+    android:layout_alignParentBottom="true"
+    android:layout_gravity="center"
+    android:background="#080808"
     android:orientation="vertical"
-    android:background="#263238"
     tools:context=".LoginActivity">
-
 
 
   <ImageView
       android:id="@+id/imageView3"
-      android:layout_width="190dp"
+      android:layout_width="243dp"
+      android:layout_height="254dp"
+      android:layout_marginStart="84dp"
+      android:layout_marginTop="50dp"
+      android:layout_marginEnd="42dp"
       android:layout_gravity="center_horizontal"
-      android:layout_height="294dp"
+      android:layout_marginBottom="427dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.238"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="1.0"
       app:srcCompat="@drawable/_2457288_removebg_preview_copy_1" />
 
   <EditText
       android:id="@+id/txtEmailAddress"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
+      android:layout_width="324dp"
+      android:layout_height="53dp"
+      android:layout_marginStart="44dp"
+      android:layout_marginTop="348dp"
+      android:layout_marginEnd="43dp"
+      android:layout_marginBottom="330dp"
       android:layout_gravity="center_horizontal"
       android:autofillHints="email"
       android:ems="10"
-      android:layout_margin="5dp"
       android:hint="Email Address"
-      android:inputType="textEmailAddress" />
+      android:inputType="textEmailAddress"
+      android:textColor="#FFFFFF"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
 
   <EditText
       android:id="@+id/txtPassword"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:ems="10"
+      android:layout_width="324dp"
+      android:layout_height="53dp"
+      android:layout_marginStart="44dp"
+      android:layout_marginTop="410dp"
+      android:layout_marginEnd="21dp"
+      android:layout_marginBottom="268dp"
       android:layout_gravity="center_horizontal"
-      android:hint="Password"
-      android:layout_margin="5dp"
       android:autofillHints="password"
-      android:layout_marginBottom="30dp"
-      android:inputType="textPassword" />
+      android:ems="10"
+      android:hint="Password"
+      android:inputType="textPassword"
+      android:textColor="#FFFFFF"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.0"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.0" />
 
   <Button
       android:id="@+id/buttonLogin"
-      android:layout_width="150dp"
-      android:layout_height="wrap_content"
+      android:layout_width="114dp"
+      android:layout_height="49dp"
+      android:layout_marginStart="148dp"
+      android:layout_marginTop="484dp"
+      android:layout_marginEnd="75dp"
+      android:layout_marginBottom="198dp"
       android:layout_gravity="center_horizontal"
       android:gravity="center"
-      android:text="Login" />
+      android:text="Login"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.0"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="1.0" />
+
   <Button
       android:id="@+id/buttonSignUp"
-      android:layout_width="150dp"
-      android:layout_height="wrap_content"
+      android:layout_width="114dp"
+      android:layout_height="49dp"
+      android:layout_marginStart="148dp"
+      android:layout_marginTop="545dp"
+      android:layout_marginEnd="75dp"
+      android:layout_marginBottom="137dp"
       android:layout_gravity="center_horizontal"
       android:gravity="center"
-      android:text="Sign Up" />
+      android:text="Sign Up"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.0"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="1.0" />
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
