--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#263238"
+    android:background="#080808"
     tools:context=".SettingsActivity">
 
     <Button
@@ -14,10 +14,10 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="228dp"
         android:layout_marginEnd="80dp"
-        android:background="#000000"
-        android:backgroundTint="#EF6C00 "
+        android:background="#39115C"
+        android:backgroundTint="#BDBDBD"
+        android:textColor="#39115C"
         android:text="RESET DATA"
-        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/settings_change_email"
         app:layout_constraintTop_toTopOf="parent" />
@@ -27,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="128dp"
-        android:background="#F44336"
+        android:background="#39115C"
         android:backgroundTint="#ECECEC"
         android:text="Signout"
         android:textColor="#5603AD"
@@ -66,13 +66,77 @@
         android:layout_marginStart="76dp"
         android:layout_marginTop="228dp"
         android:layout_marginEnd="19dp"
-        android:background="#000000"
-        android:backgroundTint="#EF6C00 "
+        android:background="#39115C"
+        android:backgroundTint="#BDBDBD"
+        android:textColor="#39115C"
         android:text="Change Email"
-        android:textColor="#000000"
         app:layout_constraintEnd_toStartOf="@+id/settings_reset_data"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/homeButton"
+        android:layout_width="101.5dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="202dp"
+        android:layout_marginTop="685dp"
+        android:layout_marginEnd="108dp"
+        android:contentDescription="TODO"
+        android:padding="0dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/screen_shot_2020_11_24_at_4_15_01_pm"/>
+
+    <ImageButton
+        android:id="@+id/settingsButton"
+        android:layout_width="109dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="303dp"
+        android:layout_marginTop="685dp"
+        android:contentDescription="TODO"
+        android:padding="0dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/screen_shot_2020_11_24_at_4_16_16_pm" />
+
+    <ImageButton
+        android:id="@+id/stockButton"
+        android:layout_width="101.5dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="101dp"
+        android:layout_marginTop="685dp"
+        android:layout_marginEnd="209dp"
+        android:contentDescription="TODO"
+        android:padding="0dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/screen_shot_2020_11_24_at_4_15_38_pm" />
+
+    <ImageButton
+        android:id="@+id/Learning"
+        android:layout_width="101.5dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="685dp"
+        android:layout_marginEnd="310dp"
+        android:contentDescription="TODO"
+        android:padding="0dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/screen_shot_2020_11_24_at_4_15_01_pm" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
