--- a/app/src/main/res/layout/activity_stocks.xml
+++ b/app/src/main/res/layout/activity_stocks.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#080808"
+    android:background="#FFFFFF"
     android:orientation="vertical"
     tools:context=".StocksActivity">
 
