everything works colour

--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:padding="16dp"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:textColor="#FFFFFF">
 
 
     <ImageView
@@ -19,7 +20,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/TextAppearance.AppCompat.Title"
-        android:text="Name" />
+        android:text="Name"
+        android:textColor="#FFFFFF"/>
 
     <TextView
         android:id="@+id/txtDes"
@@ -31,6 +33,7 @@
         android:maxLength="50"
         android:singleLine="true"
         style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
-        android:text="Des" />
+        android:text="Des"
+        android:textColor="#FFFFFF"/>
 
 </RelativeLayout>
