--- a/app/src/main/res/layout/activity_learning_page.xml
+++ b/app/src/main/res/layout/activity_learning_page.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:textColor="#FFFFFF"
     tools:context=".MainActivity">
 
     <ListView
@@ -12,7 +13,8 @@
         android:layout_height="731dp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="#FFFFFF">
     </ListView>
 
     <ImageButton
