changed to (ugly) white for presentation

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,42 +7,24 @@
     android:layout_height="match_parent"
     android:layout_alignParentBottom="true"
     android:layout_gravity="center"
-    android:background="#080808"
     android:orientation="vertical"
     tools:context=".LoginActivity">
 
-
-  <ImageView
-      android:id="@+id/imageView3"
-      android:layout_width="243dp"
-      android:layout_height="254dp"
-      android:layout_marginStart="84dp"
-      android:layout_marginTop="50dp"
-      android:layout_marginEnd="42dp"
-      android:layout_gravity="center_horizontal"
-      android:layout_marginBottom="427dp"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.238"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="1.0"
-      app:srcCompat="@drawable/_2457288_removebg_preview_copy_1" />
 
   <EditText
       android:id="@+id/txtEmailAddress"
       android:layout_width="324dp"
       android:layout_height="53dp"
-      android:layout_marginStart="44dp"
-      android:layout_marginTop="348dp"
-      android:layout_marginEnd="43dp"
-      android:layout_marginBottom="330dp"
       android:layout_gravity="center_horizontal"
+      android:layout_marginStart="44dp"
+      android:layout_marginTop="349dp"
+      android:layout_marginEnd="43dp"
+      android:layout_marginBottom="329dp"
       android:autofillHints="email"
       android:ems="10"
       android:hint="Email Address"
       android:inputType="textEmailAddress"
-      android:textColor="#FFFFFF"
+      android:textColor="#000000"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
@@ -52,58 +34,66 @@
       android:id="@+id/txtPassword"
       android:layout_width="324dp"
       android:layout_height="53dp"
+      android:layout_gravity="center_horizontal"
       android:layout_marginStart="44dp"
       android:layout_marginTop="410dp"
-      android:layout_marginEnd="21dp"
+      android:layout_marginEnd="43dp"
       android:layout_marginBottom="268dp"
-      android:layout_gravity="center_horizontal"
       android:autofillHints="password"
       android:ems="10"
       android:hint="Password"
       android:inputType="textPassword"
-      android:textColor="#FFFFFF"
+      android:textColor="#000000"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.0" />
+      app:layout_constraintTop_toTopOf="parent" />
 
   <Button
       android:id="@+id/buttonLogin"
       android:layout_width="114dp"
       android:layout_height="49dp"
+      android:layout_gravity="center_horizontal"
       android:layout_marginStart="148dp"
       android:layout_marginTop="484dp"
-      android:layout_marginEnd="75dp"
+      android:layout_marginEnd="149dp"
       android:layout_marginBottom="198dp"
-      android:layout_gravity="center_horizontal"
       android:gravity="center"
       android:text="Login"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="1.0" />
+      app:layout_constraintTop_toTopOf="parent" />
 
   <Button
       android:id="@+id/buttonSignUp"
       android:layout_width="114dp"
       android:layout_height="49dp"
+      android:layout_gravity="center_horizontal"
       android:layout_marginStart="148dp"
       android:layout_marginTop="545dp"
-      android:layout_marginEnd="75dp"
+      android:layout_marginEnd="149dp"
       android:layout_marginBottom="137dp"
-      android:layout_gravity="center_horizontal"
       android:gravity="center"
       android:text="Sign Up"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.0"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
+
+  <ImageView
+      android:id="@+id/imageView4"
+      android:layout_width="264dp"
+      android:layout_height="240dp"
+      android:layout_marginStart="74dp"
+      android:layout_marginTop="80dp"
+      android:layout_marginEnd="73dp"
+      android:layout_marginBottom="411dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="1.0" />
+      app:srcCompat="@drawable/_2457288_removebg_preview_copy_2" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
