--- a/app/src/main/res/layout/activity_stocks.xml
+++ b/app/src/main/res/layout/activity_stocks.xml
@@ -57,44 +57,45 @@
         android:id="@+id/homeButton"
         android:layout_width="104dp"
         android:layout_height="46dp"
+        android:layout_marginStart="202dp"
+        android:layout_marginTop="685dp"
+        android:layout_marginEnd="105dp"
         android:padding="0dp"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.656"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/screen_shot_2020_11_24_at_4_15_01_pm" />
 
     <ImageButton
         android:id="@+id/settingsButton"
         android:layout_width="107dp"
         android:layout_height="46dp"
+        android:layout_marginStart="304dp"
+        android:layout_marginTop="685dp"
         android:contentDescription="TODO"
         android:padding="0dp"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/screen_shot_2020_11_24_at_4_15_11_pm" />
 
     <ImageButton
         android:id="@+id/stockButton"
         android:layout_width="107dp"
         android:layout_height="46dp"
+        android:layout_marginStart="99dp"
         android:layout_marginTop="685dp"
+        android:layout_marginEnd="205dp"
         android:padding="0dp"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.327"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/screen_shot_2020_11_24_at_4_16_06_pm" />
 
     <ImageButton
