--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -44,7 +44,7 @@
         android:layout_marginEnd="57dp"
         android:hint="@string/sett_password"
         android:password="true"
-        android:textColor="#FF5722"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -58,7 +58,7 @@
         android:layout_marginEnd="57dp"
         android:hint="@string/sett_new_email"
         android:password="false"
-        android:textColor="#FF5722"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
